--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-demo",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://ecos.bok.or.kr",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -9,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "swagger-ui-react": "^5.11.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
